# graph-benchmarking

./: .gitignore  CMakeLists.txt  README.md  igl_bindings.cpp  main.cpp  setup.py  test_bindings.py
CMakeModules/: FindSnap.cmake
benchmark/: benchmark.py  benchmark2.py  graph_gt.py  graph_igraph.py  graph_nx.py  graph_snap.py
docker/: Dockerfile
lib/Snap-5.0/: CMakeLists.txt
lib/Snap-5.0/snap-core/: CMakeLists.txt
src/: graph_base.h  graph_lemon.cpp  graph_lemon.h  graph_snap.cpp  graph_snap.h
